# sist_analisis_ventas

./: .gitignore  README.md  demo_integracion.ipynb  pyproject.toml
scripts/: init_db.py
sql/: load_data.sql  optimizations.sql
src/: config.py
src/models/: __init__.py  category.py  city.py  country.py  customer.py  employee.py  person.py  product.py  sale.py
src/patterns/: __init__.py  database_singleton.py  query_builder.py  report_factory.py
tests/: conftest.py  test_city.py  test_country.py  test_employee.py  test_patterns.py  test_product.py  test_sale.py
